--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - brotlipy=0.7.0=py37h8f50634_1000
   - bzip2=1.0.8=h516909a_2
   - ca-certificates=2020.4.5.2=hecda079_0
+  - cairo=1.16.0=hcf35c78_1003
   - certifi=2020.4.5.2=py37hc8dfbb8_0
   - cffi=1.14.0=py37hd463f26_0
   - chardet=3.0.4=py37hc8dfbb8_1006
@@ -24,7 +25,10 @@ dependencies:
   - docutils=0.16=py37hc8dfbb8_1
   - execnet=1.7.1=py_0
   - expat=2.2.9=he1b5a44_2
+  - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.2=he06d7ca_0
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.64.3=h6f030ca_0
   - icu=64.2=he1b5a44_1
   - idna=2.9=py_1
   - imagesize=1.2.0=py_0
@@ -34,7 +38,7 @@ dependencies:
   - joblib=0.15.1=py_0
   - kiwisolver=1.2.0=py37h99015e2_0
   - krb5=1.17.1=h2fd8d38_0
-  - ld_impl_linux-64=2.34=h53a641e_4
+  - ld_impl_linux-64=2.34=h53a641e_5
   - libblas=3.8.0=16_openblas
   - libcblas=3.8.0=16_openblas
   - libcurl=7.69.1=hf7181ac_0
@@ -42,12 +46,16 @@ dependencies:
   - libffi=3.2.1=he1b5a44_1007
   - libgcc-ng=9.2.0=h24d8f2e_2
   - libgfortran-ng=7.5.0=hdf63c60_6
+  - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=16_openblas
   - libopenblas=0.3.9=h5ec1e0e_0
   - libpng=1.6.37=hed695b0_1
   - libssh2=1.9.0=hab1572f_2
   - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libuuid=2.32.1=h14c3975_1000
   - libuv=1.38.0=h516909a_0
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.10=hee79883_0
   - llvm-openmp=10.0.0=hc9558a2_0
   - markupsafe=1.1.1=py37h8f50634_1
   - matplotlib-base=3.2.1=py37h30547a4_0
@@ -58,18 +66,22 @@ dependencies:
   - openssl=1.1.1g=h516909a_0
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.4=py37h0da4684_0
-  - patchelf=0.10=he1b5a44_0
+  - patchelf=0.11=he1b5a44_0
   - patsy=0.5.1=py_0
+  - pcre=8.44=he1b5a44_0
   - pip=20.1.1=py_1
+  - pixman=0.38.0=h516909a_1003
   - pluggy=0.13.1=py37hc8dfbb8_1
+  - pthread-stubs=0.4=h14c3975_1001
   - py=1.8.1=py_0
+  - pycairo=1.19.1=py37h01af8b0_3
   - pycparser=2.20=py_0
   - pygments=2.6.1=py_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pysocks=1.7.1=py37hc8dfbb8_1
   - pytest=5.4.3=py37hc8dfbb8_0
-  - pytest-cov=2.8.1=py_0
+  - pytest-cov=2.9.0=pyh9f0ad1d_0
   - pytest-forked=1.1.2=py_0
   - pytest-xdist=1.32.0=pyh9f0ad1d_0
   - python=3.7.6=cpython_h8356626_6
@@ -85,7 +97,7 @@ dependencies:
   - setuptools=47.1.1=py37hc8dfbb8_0
   - six=1.15.0=pyh9f0ad1d_0
   - snowballstemmer=2.0.0=py_0
-  - sphinx=3.0.4=py_0
+  - sphinx=3.1.0=py_0
   - sphinx-math-dollar=1.1.1=py_0
   - sphinx_rtd_theme=0.4.3=py_0
   - sphinxcontrib-applehelp=1.0.2=py_0
@@ -103,6 +115,17 @@ dependencies:
   - urllib3=1.25.9=py_0
   - wcwidth=0.2.4=pyh9f0ad1d_0
   - wheel=0.34.2=py_1
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.9=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h516909a_0
   - yaml=0.2.5=h516909a_0
   - zipp=3.1.0=py_0
@@ -112,7 +135,7 @@ dependencies:
     - argparse==1.4.0
     - async-timeout==3.0.1
     - autobahn==20.4.3
-    - backcall==0.1.0
+    - backcall==0.2.0
     - bleach==3.1.5
     - box2d==2.3.10
     - cloudpickle==1.3.0
@@ -137,7 +160,7 @@ dependencies:
     - mistune==0.8.4
     - multidict==4.7.6
     - nbconvert==5.6.1
-    - nbformat==5.0.6
+    - nbformat==5.0.7
     - notebook==6.0.3
     - pandocfilters==1.4.2
     - parso==0.7.0
@@ -163,3 +186,4 @@ dependencies:
     - webencodings==0.5.1
     - widgetsnbextension==3.5.1
     - yarl==1.4.2
+
