--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,9 +25,8 @@ jobs:
           chmod +x test-reporter-latest-linux-amd64
           ./test-reporter-latest-linux-amd64 before-build
           docker run --rm -i -v $COVPATH:/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime'; sudo cp ./coverage.xml /cov"
-          sudo mkdir /home/user/
-          sudo mkdir /home/user/SimuRLacra
-          sudo ln -s $COVPATH /home/user/SimuRLacra
+          ./test-reporter-latest-linux-amd64 format-coverage -t coverage.py -p /home/user
+          ./test-reporter-latest-linux-amd64 upload-coverage
       - uses: codecov/codecov-action@v1
         with:
           file: coverage.xml # optional
